...
  "generateLineup": "Generate Lineup",
  "generateLineupImage": "Generate Lineup Image",
  "generateNewMessage": "Generate new message",
  "getStarted": "Get Started",
  "goBack": "Go Back",
  "goPro": "Go Pro",
  "goToGame": "Go to game",
  "goalCelebrationPosts": "Goal celebration posts",
  "goals": "Goals",
  "gotIt": "Got it",
  "hideHighlights": "Hide Highlights",
  "highlightDeleted": "Highlight deleted",
  "highlightSaved": "Highlight saved successfully",
  "highlights": "Highlights",
  "hintAwardTitle": "e.g., MVP, All-Star, Top Scorer",
...
