...

  final VoidCallback? onTeamUpdated;

  @override
  Widget build(BuildContext context) {
    final responsiveAvatar = ResponsiveAvatar(
      key: const Key('team_logo'),
      backgroundColor: Colors.transparent,
      imageUrl: team.logoUrl,
      initials: team.fullName.isNotEmpty ? team.fullName[0] : '?',
      isSquare: team.isLogoSquare ?? false,
    );

    final organizationAvatar =
        team.organizationLogoUrl != null && team.organizationLogoUrl!.isNotEmpty
            ? ResponsiveAvatar(
                key: const Key('organization_logo'),
                backgroundColor: Colors.transparent,
                imageUrl: team.organizationLogoUrl,
                initials: team.fullName.isNotEmpty ? team.fullName[0] : '?',
                isSquare: team.isOrganizationLogoSquare ?? false,
              )
            : null;
...
